2002-03-03  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_write_to_stream): Get rid of some
	extra line feeds.

2002-03-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-pgp-mime.c (g_mime_pgp_mime_part_sign): Add support for
	the pgp-ripemd160 hash type.

	* gmime-filter-chomp.c (g_mime_filter_chomp_new): New stream
	filter that chomps excess trailing whitespace from the end of the
	stream. This is needed to update the PGP/MIME code to comply with
	rfc3156.

	* gmime-pgp-mime.c (g_mime_pgp_mime_part_verify): Don't attach a
	from-filter, if it ain't from-filtered already, then we'll just be
	breaking stuff. To become rfc3156 compliant, add a chomp filter
	here.
	(g_mime_pgp_mime_part_sign): Add a chomp filter here too.

	* gmime-part.c (write_content): Don't flush the output stream
	here.

2002-02-21  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated.

	* configure.in: Updated version to 0.8.0

2002-01-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-charset.c (g_mime_charset_name): Updated for AIX, HPUX,
	IRIX, and Sun systems.

2002-01-24  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv.c (iconv_cache_bucket_add_node): Fixed an oops.
	(iconv_cache_bucket_get_first_unused): Fixed another oops.

2002-01-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-data-wrapper.c (g_mime_data_wrapper_write_to_stream):
	Handle the x-uuencode encoding type.

	* gmime-utils.c (g_mime_utils_uuencode_close): No longer needs a
	uulen argument since it is now compacted into the state argument.
	(g_mime_utils_uuencode_step): Same here.

	* gmime-filter-basic.c (filter_filter): Ignore data until we have
	found the "begin" line. Also, we no longer need uulen.
	(filter_complete): Same.

	* gmime-part.c (g_mime_part_encoding_to_string): Handle
	x-uuencode.
	(g_mime_part_encoding_from_string): Same.
	(g_mime_part_set_pre_encoded_content): Here too.
	(write_content): And again here.

2002-01-19  Jeffrey Stedfast  <fejj@ximian.com>
